# aws-cdk-update-checker

./: Dockerfile  README.md  action.yml  docker-compose.yml  entrypoint-github-actions.sh  publish-pypi.sh  pyproject.toml  run_test.sh
.github/workflows/: comment-failure-action.yml  publish-pypi.yml  publish.yml  pytest.yml  snyk.yml
aws_cdk_update_checker/: main.py
tests/: test_aws_cdk_update_checker.py
